<resources>
    <string name="app_name">Indiaeon POS</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_login">Sign In</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_email">Email Address</string>
    <string name="str_password">Password</string>
    <string name="str_take_a_time_slot">Pick a new slot</string>
    <string name="str_please_take_a_time_slot">Please take a time slot</string>
    <string name="str_weekly_report">Weekly Report</string>
    <string name="str_monthly_report">Monthly Report</string>
    <string name="str_total_ride">Total Ride</string>
    <string name="str_actual_ride">Actual Ride</string>
    <string name="str_submit">Submit</string>
    <string name="str_drawer_open">Open drawer</string>
    <string name="str_drawer_close">Close drawer</string>
    <string name="str_error_email_address">Please enter email address</string>
    <string name="str_error_valid_email_address">Please enter valid email address</string>
    <string name="str_error_password">Please enter Password</string>
    <string name="str_check_internet_connections">Please check your internet connection</string>
    <string name="str_something_went_wrong_on_server">Something went wrong on server</string>
    <string name="str_ride_id">Ride Id</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_reports">Reports</string>
    <string name="str_sale_list">Sale List</string>
    <string name="str_purchase_list">Purchase List</string>
    <string name="str_estimate_list">Estimate List</string>
    <string name="str_expense_list">Expense List</string>
    <string name="str_money_in_list">Money In List</string>
    <string name="str_money_out_list">Money Out List</string>
    <string name="str_item_list">Item List</string>
    <string name="str_pos">POS</string>
    <string name="str_party_list">Party List</string>
    <string name="str_greetings">Greetings</string>
    <string name="str_settings">Settings</string>
    <string name="str_tax_settings">Taxes Settings</string>
    <string name="str_payment_mode_settings">Payment Mode Settings</string>
    <string name="str_unit_settings">Unit Settings</string>
    <string name="str_warehouse_settings">WareHouse Settings</string>
    <string name="str_add_tax">Add Tax</string>
    <string name="str_add_warehouse">Add WareHouse</string>
    <string name="str_add_units">Add Units</string>
    <string name="str_add_payment_mode">Add Payment Mode</string>
    <string name="str_logout">Logout</string>
    <string name="str_category">Category</string>
    <string name="str_brand">Brand</string>
    <string name="str_product">Product</string>
    <string name="str_add_category">Add Category</string>
    <string name="str_update_category">Update Category</string>
    <string name="str_category_image">Category Image</string>
    <string name="str_category_name">Category Name</string>
    <string name="str_new_category">New Category</string>
    <string name="str_new_tax">New Tax</string>
    <string name="str_new_wareHouse">New WareHouse</string>
    <string name="str_new_unit">New Units</string>
    <string name="str_new_payment_mode">New Payment Mode</string>
    <string name="str_new_brand">New Brand</string>
    <string name="str_new_prodcucts">Add New Products</string>
    <string name="str_new_custoer">Add New Customer</string>
    <string name="str_new_suppliers">Add New Suppliers</string>
    <string name="str_brand_image">Brand Image</string>
    <string name="str_brand_name">Brand Name</string>
    <string name="str_warehouse_name">WareHouse Name</string>
    <string name="str_user">Customer</string>
    <string name="str_amount">Amount</string>
    <string name="str_payment_date">Payment Date</string>
    <string name="str_payment_mode">Payment Mode</string>
    <string name="str_notes">Notes</string>
    <string name="str_add_brand">Add Brand</string>
    <string name="str_edit_brand">Update Brand</string>
    <string name="str_save">Save</string>
    <string name="str_profile_image">Profile Image</string>
    <string name="str_warehouse">WareHouse</string>
    <string name="str_tax_number">Tax Number</string>
    <string name="str_opening_balance">Opening Balance</string>
    <string name="str_balance_type">Balance Type</string>
    <string name="str_billing_address">Billing Address</string>
    <string name="str_credit_period">Credit Period</string>
    <string name="str_credit_limit">Credit Limit</string>
    <string name="str_camera">Camera</string>
    <string name="str_galery">Gallery</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_name">Name*</string>
    <string name="str_rate">Rate</string>
    <string name="str_mode_type">Mode Type</string>
    <string name="str_slug">Slug</string>
    <string name="str_new_email">Email</string>
    <string name="str_phonenumber">Phone Number</string>
    <string name="str_logo">Logo</string>
    <string name="str_address">Address</string>
    <string name="str_customers">Customers</string>
    <string name="str_suppliers">Suppliers</string>
    <string name="str_daily">Daily</string>
    <string name="str_weekly">Weekly</string>
    <string name="str_monthly">Monthly</string>
    <string name="enable_gps">Please enable GPS</string>
    <string name="str_vehicle_number">Vehicle Number</string>
    <string name="str_check_in_now">Check In Now</string>
    <string name="str_break">Break</string>
    <string name="str_start">Let\'s Start</string>
    <string name="str_checkout">CheckOut</string>
    <string name="str_withdraaw_checkout">Withdraw CheckOut</string>
    <string name="str_product_image">Product Image</string>
    <string name="str_sell">Sale</string>
    <string name="str_purchase">Purchase</string>
    <string name="str_sellreturn">Sale Return</string>
    <string name="str_purchasereturn">Purchase Return</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_logo">Category Logo</string>
    <string name="str_customer">Customer</string>
    <string name="str_supplier">Supplier</string>
    <string name="Rupee">₹</string>
    <string name="str_update">Update</string>
    <string name="total">Total</string>
    <string name="due">Due</string>
    <string name="str_add_items">Add Items</string>
    <string name="str_item_subtotal">Item Subtotal</string>
    <string name="str_quantity">Quantity</string>
    <string name="str_basic_amount">Basic Amount</string>
    <string name="str_payments">Payments</string>
    <string name="str_stock_alert">Stock Alert</string>
    <string name="str_sales_summary">Sales Summary</string>
    <string name="str_purchase_gst_register">Purchase GST Register</string>
    <string name="sales_gst_register">Sales GST Register</string>
    <string name="str_stock_summary">Stock Summary</string>
    <string name="str_rate_list">Rate List</string>
    <string name="str_product_sales_summary">Product Sales Summary</string>
    <string name="str_user_reports">User Reports</string>
    <string name="str_profit_and_loss"><![CDATA[Profit & Loss]]></string>
    <string name="str_update_brand">Update Brand</string>
    <string name="str_add">Add</string>
    <string name="str_customer_report">Customer Report</string>
    <string name="str_supplier_report">Supplier Report</string>
    <string name="str_view_pdf">View PDF</string>
    <string name="str_items">Items</string>
    <string name="str_business_dashboard">Business Dashboard</string>
    <string name="str_sale">Sale</string>
    <string name="str_expense">Expense</string>
    <string name="str_my_online_store">My Online Store</string>
    <string name="str_products">Products</string>
    <string name="str_cash_and_bank"><![CDATA[Cash & Bank]]></string>
    <string name="str_subscription">Subscription</string>
    <string name="str_stock_transfer">Stock Transfer</string>
    <string name="str_stock_adjustment">Stock Adjustment</string>
    <string name="str_please_log_in_to_continue">Please Login to Continue</string>
    <string name="str_username">Username</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_email_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="authorization" translatable="false">Authorization</string>
    <string name="content_type" translatable="false">Content-Type</string>
    <string name="x_api_key">X-API-KEY</string>
    <string name="error_internet">No Internet Connection</string>
    <string name="btn_okay">OKAY</string>
    <string name="error_server_error">Oops! Something went wrong!</string>
    <string name="error_api">Error of API</string>
    <string name="response">Response</string>
    <string name="error_expired_token">Expired token</string>
    <string name="error_session_expired">Session Expired!</string>
    <string name="error_please_login_again">Please Login Again</string>
    <string name="your_qr_code">Your QR Code</string>
    <string name="my_wallet_balance">My Wallet Balance</string>
    <string name="rupee_zero">₹ 0.00</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="request_nfunds">Request \nFunds</string>
    <string name="add_nmoney">Ad Money</string>
    <string name="transfer_nfunds">Transfer \nFunds</string>
    <string name="reports">Reports</string>
    <string name="recharge_and_pay_bil">Recharge and Pay Bill</string>
    <string name="mobile">Mobile</string>
    <string name="dth">DTH</string>
    <string name="electricity">Electricity</string>
    <string name="cylinder">Cylinder</string>
    <string name="landline">Landline</string>
    <string name="gas">Gas</string>
    <string name="fastag">Fastag</string>
    <string name="insurance">Insurance</string>
    <string name="banking_services">Banking Services</string>
    <string name="micro_natm">Micro \nATM</string>
    <string name="dmt_npayment">DMT \nPayment</string>
    <string name="aeps_npayments">AEPS \nPayments</string>
    <string name="loan_repayment">Loan Repayment</string>
    <string name="utility_services">Utility Services</string>
    <string name="hotel_booking">Hotel Booking</string>
    <string name="manage_users">Manage Users</string>
    <string name="settings">Settings</string>
    <string name="daybook">Daybook</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="log_out">Log Out</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="str_microatm">Micro ATM</string>
    <string name="register">Register</string>
    <string name="aeps_report">AEPS Report</string>
    <string name="aeps_ledger">AEPS Ledger</string>
    <string name="wallet_ledger">Wallet Ledger</string>
    <string name="pay_now">Pay Now</string>
    <string name="general_reports">General Reports</string>
    <string name="aeps_reports">AEPS Reports</string>
    <string name="day_book">Day Book</string>
    <string name="analytics">Ananlytics</string>
    <string name="track_your_leads">Track Your Leads</string>
    <string name="aeps_nhistory">AEPS\nHistory</string>
    <string name="aeps_nwithdrawal">AEPS\nWithdrawal</string>
    <string name="aeps_nledger">AEPS\nLedger</string>
    <string name="aeps_ncommission_slab">AEPS\nCommission Slab</string>
    <string name="dmt_ncommission_slab">DMT\nCommission Slab</string>
    <string name="dmt_reports">DMT Reports</string>
    <string name="dmt_history">DMT\nHistory</string>
</resources>