<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_image">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerInParent="true"
        android:elevation="@dimen/_10sdp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/str_welcome"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/str_please_log_in_to_continue"
            android:textColor="@color/colorPrimary" />


        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/applogo"
            android:layout_gravity="center_horizontal"/>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/etUserName"
                style="@style/modifiedEditText"
                android:hint="@string/str_username"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/etPassword"
                style="@style/modifiedEditText"
                android:hint="@string/str_password"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/parent"
            android:layout_marginTop="10dp"
            android:text="@string/str_forgot_password"
            android:textAlignment="textEnd"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/str_login"
            android:gravity="center"
            android:background="@drawable/bg_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textColor="@color/white"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_30sdp"
            android:textStyle="bold"

            android:layout_marginTop="@dimen/loginViewsMargin"
            />

        <TextView
            android:id="@+id/btnRegister"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="textEnd"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>